--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,12 +11,24 @@
   ],
   "scripts": {
     "lint": "TIMING=1 eslint \"**/*.ts*\"",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc-watch --onSuccess tsc"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
+    "@types/node-fetch": "^2.6.2",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
+    "tsc-watch": "^5.0.3",
     "tsconfig": "*",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "mqtt": "^4.3.7",
+    "node-fetch": "^2.6.1"
+  },
+  "author": {
+    "name": "Eren Kulaksiz",
+    "email": "erenkulaksz@gmail.com"
   }
 }
