--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/react-library.json",
+  "extends": "tsconfig/client-library.json",
   "include": ["./src"],
   "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
