[fix] fix dist and .next files included

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "superlog.io",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This library makes easy to establish connection between your client and Speedlog dashboard.",
   "private": false,
   "workspaces": [
@@ -21,6 +21,7 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
+    "publish": "npm publish",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
