--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,7 @@
     "es"
   ],
   "scripts": {
-    "lint": "TIMING=1 eslint \"**/*.ts*\"",
+    "lint": "eslint \"**/*.ts*\"",
     "build": "tsc",
     "dev": "tsc-watch --onSuccess tsc"
   },
