--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@speedlog/client",
+  "name": "speedlog-client",
   "version": "0.0.1",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "license": "MIT",
+  "private": false,
   "files": [
     "lib",
     "dist",
