--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -12,7 +12,7 @@
     "next": "13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "speedlog": "*"
+    "speedlog-client": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
