--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,10 +1,16 @@
 {
   "name": "speedlog-client",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "private": false,
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "files": [
     "lib",
     "dist",
