--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -19,7 +19,8 @@
     "next-themes": "^0.2.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rehype-highlight": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
