--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.0.0",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.8",
     "autoprefixer": "^10.4.13",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
