--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "root",
   "version": "1.0.0",
-  "description": "This repo holds docs, NextJS example and client library of Nexys platform.",
+  "description": "This repo holds docs, NextJS & React example and client library of Nexys.",
   "private": false,
   "workspaces": [
     "apps/*",
