--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,6 +5,15 @@
   "types": "./dist/src/index.d.ts",
   "license": "MIT",
   "private": false,
+  "keywords": [
+    "nexys",
+    "log",
+    "logging"
+  ],
+  "author": {
+    "name": "Eren Kulaksiz",
+    "email": "erenkulaksz@gmail.com"
+  },
   "exports": {
     ".": {
       "import": "./dist/src/index.js",
@@ -28,9 +37,5 @@
     "tsc-watch": "^5.0.3",
     "tsconfig": "*",
     "typescript": "^4.5.2"
-  },
-  "author": {
-    "name": "Eren Kulaksiz",
-    "email": "erenkulaksz@gmail.com"
   }
 }
