--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "root",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "This repo holds docs, NextJS & React example and client library of Nexys.",
   "private": false,
   "workspaces": [
@@ -33,7 +33,7 @@
     "node": ">=14.0.0"
   },
   "packageManager": "npm@8.11.0",
-  "license": "ISC",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/erenkulaksiz/nexys/issues"
   },
