[feat:client] folder name, paths

--- a/packages/nexys/tsconfig.json
+++ b/packages/nexys/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/client-library.json",
+  "extends": "tsconfig/nexys.json",
   "include": ["./src"],
   "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
