--- a/packages/nexys/package.json
+++ b/packages/nexys/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nexys",
-  "version": "1.0.12",
-  "main": "./dist/src/index.js",
-  "types": "./dist/src/index.d.ts",
+  "version": "1.0.14",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "license": "Apache 2.0",
   "private": false,
   "type": "module",
@@ -17,8 +17,8 @@
   },
   "exports": {
     ".": {
-      "import": "./dist/src/index.js",
-      "types": "./dist/src/index.d.ts"
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
