--- a/packages/nexys/package.json
+++ b/packages/nexys/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexys",
-  "version": "1.0.32",
+  "version": "1.0.35",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "license": "Apache 2.0",
@@ -22,21 +22,26 @@
     }
   },
   "files": [
-    "lib",
-    "dist",
-    "es"
+    "dist"
   ],
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
     "build": "tsc",
-    "dev": "tsc-watch --onSuccess tsc"
+    "dev": "tsc-watch --onSuccess tsc",
+    "build:all": "npm run build:es2015 && npm run build:esm && npm run build:cjs && npm run build:umd && npm run build:umd:min",
+    "build:es2015": "tsc --module es2015 --target es2015 --outDir build/es2015",
+    "build:esm": "tsc --module es2015 --target es5 --outDir build/esm",
+    "build:cjs": "tsc --module commonjs --target es5 --outDir build/cjs",
+    "build:umd": "rollup dist/index.js --file dist/bundle.js --format umd --name nexys"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
+    "rollup": "^3.28.1",
     "tsc-watch": "^5.0.3",
     "tsconfig": "*",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "uglify-js": "^3.17.4"
   }
 }
