--- a/packages/nexys/package.json
+++ b/packages/nexys/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexys",
-  "version": "1.0.38",
+  "version": "1.1.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "license": "Apache 2.0",
@@ -19,6 +19,14 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./dist/index.js": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./dist/utils": {
+      "import": "./dist/utils/index.js",
+      "types": "./dist/utils/index.d.ts"
     }
   },
   "files": [
