feat: 1.1.0 release + docs-v2 updates

--- a/packages/nexys/tsconfig.json
+++ b/packages/nexys/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "es5",
     "baseUrl": ".",
     "outDir": "./dist",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "strictPropertyInitialization": false
   }
 }
