--- a/packages/nexys/package.json
+++ b/packages/nexys/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexys",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "license": "Apache 2.0",
@@ -41,7 +41,7 @@
     "build:esm": "tsc --module es2015 --target es5 --outDir build/esm",
     "build:cjs": "tsc --module commonjs --target es5 --outDir build/cjs",
     "build:umd": "rollup dist/index.js --file bundle.js --format umd --name nexys",
-    "build:umd-minify": "rollup dist/index.js --file bundle.js --format umd --name nexys && uglifyjs bundle.js --output dist/bundle.min.js"
+    "build:umd-minify": "rollup dist/index.js --file bundle.js --format umd --name nexys && uglifyjs bundle.js --output bundle.min.js"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
