feat: editing of samples in terms of code standards
#3

--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
   "bugs": {
     "url": "https://github.com/erenkulaksiz/nexys/issues"
   },
-  "homepage": "https://github.com/erenkulaksiz/nexys#readme"
+  "homepage": "https://github.com/erenkulaksiz/nexys#readme",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
