feat: fix docs-v2

--- a/package.json
+++ b/package.json
@@ -39,9 +39,5 @@
   "bugs": {
     "url": "https://github.com/erenkulaksiz/nexys/issues"
   },
-  "homepage": "https://github.com/erenkulaksiz/nexys#readme",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+  "homepage": "https://github.com/erenkulaksiz/nexys#readme"
 }
