--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,6 +1,3 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
 name: Node.js Package
 
 on:
@@ -15,6 +12,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+
+      # Change working directory to /packages/nexys
+      - run: cd packages/nexys
+
+      # Run npm ci command within the /packages/nexys directory
       - run: npm ci
 
   publish-gpr:
@@ -29,7 +31,13 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+
+      # Change working directory to /packages/nexys
+      - run: cd packages/nexys
+
+      # Run npm ci and npm publish commands within the /packages/nexys directory
+      - run: |
+          npm ci
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
