--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -39,5 +39,6 @@ jobs:
       - run: |
           npm ci
           npm publish
+          pwd
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
