--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -39,6 +39,7 @@ jobs:
       - run: |
           npm ci
           npm publish
-          pwd
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+
+      - run: pwd
