feat: heavier build

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -37,6 +37,7 @@ jobs:
           cd packages/nexys
           pwd
           npm ci
+          npm run build:all
           npm publish
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
