--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -38,6 +38,4 @@ jobs:
           pwd
           npm ci
           npm run build:all
-          npm publish
-        env:
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          NPM_TOKEN=${{secrets.NPM_TOKEN}} npm publish
