--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies and build
         working-directory: packages/nexys
         run: |
-          npm ci
+          npm install
           npm run build:all
       - name: Change directory and publish
         run: |
