feat: proper build script, added 1.2.0 bundle.min.js

--- a/packages/nexys/package.json
+++ b/packages/nexys/package.json
@@ -36,12 +36,12 @@
     "lint": "eslint \"**/*.ts*\"",
     "build": "tsc",
     "dev": "tsc-watch --onSuccess tsc",
-    "build:all": "npm run build:es2015 && npm run build:esm && npm run build:cjs && npm run build:umd && npm run build:umd-minify",
+    "build:all": "npm run build && npm run build:es2015 && npm run build:esm && npm run build:cjs && npm run build:umd && npm run build:umd-minify",
     "build:es2015": "tsc --module es2015 --target es2015 --outDir build/es2015",
     "build:esm": "tsc --module es2015 --target es5 --outDir build/esm",
     "build:cjs": "tsc --module commonjs --target es5 --outDir build/cjs",
-    "build:umd": "rollup dist/index.js --file bundle.js --format umd --name nexys",
-    "build:umd-minify": "rollup dist/index.js --file bundle.js --format umd --name nexys && uglifyjs bundle.js --output bundle.min.js"
+    "build:umd": "npm run build && rollup dist/index.js --file bundle.js --format umd --name nexys",
+    "build:umd-minify": "npm run build && rollup dist/index.js --file bundle.js --format umd --name nexys && uglifyjs bundle.js --output bundle.min.js"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
